2007-07-03  Nick Clifton  <nickc@redhat.com>

	* lib/gas-defs.exp: Update copyright notice to refer to GPLv3.
	* gas/all/itbl-test.c, gas/all/test-example.c, gas/all/test-gen.c,
	gas/arm/maverick.c, gas/cris/cris.exp, gas/hppa/basic/basic.exp,
	gas/hppa/parse/parse.exp, gas/hppa/reloc/reloc.exp,
	gas/hppa/unsorted/unsorted.exp, gas/mmix/mmix-err.exp,
	gas/mmix/mmix-list.exp, gas/mmix/mmix.exp, gas/mn10200/basic.exp,
	gas/mn10300/am33-2.c, gas/mn10300/basic.exp, gas/pdp11/opcode.s,
	gas/ppc/aix.exp, gas/sh/arch/arch.exp, gas/sh/sh64/sh64.exp,
	gas/sh/basic.exp, gas/sh/err.exp, gas/v850/basic.exp: Likewise.

2007-07-03  Nathan Sidwell  <nathan@codesourcery.com>

	* gas/m68k/mcf-coproc.d: New.
	* gas/m68k/mcf-coproc.s: New.
	* gas/m68k/all.exp: Add it.

2007-06-29  M R Swami Reddy  <MR.Swami.Reddy@nsc.com>

	* gas/cr16: New directory
	* gas/cr16.exp: New file
	* add_test.d and  add_test.s: New files
	* and_test.d and and_test.s: New files
	* ash_test.d and ash_test.s: New files
	* bal_test.d and bal_test.s: New files
	* bcc_test.d and bcc_test.s: New files
	* beq0_test.d and beq0_test.s: New files
	* cbitb_test.d and cbitb_test.s: New files
	* cbitw_test.d and cbitw_test.s: New files
	* cinv_test.d and cinv_test.s: New files
	* cmp_test.d and cmp_test.s: New files
	* excp_test.d and excp_test.s: New files
	* jal_test.d and jal_test.s: New files
	* jcc_test.d and jcc_test.s: New files
	* loadb_test.d and loadb_test.s: New files
	* loadd_test.d and loadd_test.s: New files
	* loadm_test.d and loadm_test.s: New files
	* loadw_test.d and loadw_test.s: New files
	* lpsp_test.d and lpsp_test.s: New files
	* lsh_test.d and lsh_test.s: New files
	* mov_test.d and mov_test.s: New files
	* mul_test.d and mul_test.s: New files
	* or_test.d and or_test.s: New files
	* popret_test.d and popret_test.s: New files
	* pop_test.d and pop_test.s: New files
	* push_test.d and push_test.s: New files
	* sbitb_test.d and sbitb_test.s: New files
	* sbitw_test.d and sbitw_test.s: New files