@@ -1,3 +1,10 @@
+2007-07-03  M R Swami Reddy  <MR.Swami.Reddy@nsc.com>
+
+	* gas/elf/elf.exp: Expect redef test to fail for CR16.
+	* gas/all/gas.exp: Expect forward and do_930509a tests to fail for
+	the CR16.
+	* gas/cr16/cinv_test.d: Remove whitespace dependencies.
+
 2007-07-03  Nick Clifton  <nickc@redhat.com>
 
 	* lib/gas-defs.exp: Update copyright notice to refer to GPLv3.
